--- a/index.html
+++ b/index.html
@@ -3,22 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<link rel="icon" type="image/png" href="images/favicon.png" />
-	<title>NYAN CAT RACER</title>
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">	<title>NYAN CAT RACER</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>	
-		
-		<audio 
-    src="resources/nyancat.mp3"
-    autoplay="autoplay"
-    loop="loop"
-></audio>
-
+		<audio src="resources/nyancat.mp3" autoplay="autoplay" loop="loop"></audio>
 		<canvas width="1400" height="740" class="canvas"></canvas>
-
-		<script src="script/canvas.polyfill.js" type="text/javascript"></script>
-		
+    <div class="mobile">Desktop Experience</div>
+		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
 		<script src="script/main.js" type="text/javascript"></script>
-
 </body>
 </html>
