--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>	
 		<audio src="resources/nyancat.mp3" autoplay="autoplay" loop="loop"></audio>
-		<canvas width="1400" height="740" class="canvas"></canvas>
+		<canvas width="" height="" class="canvas"></canvas>
     <div class="mobile">Desktop Experience</div>
 		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
 		<script src="script/main.js" type="text/javascript"></script>
