--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>	
-		<audio src="resources/nyancat.mp3" autoplay="autoplay" loop="loop"></audio>
-		<canvas width="" height="" class="canvas"></canvas>
+<!-- 		<audio src="resources/nyancat.mp3" autoplay="autoplay" loop="loop"></audio>
+ -->		<canvas width="" height="" class="canvas"></canvas>
     <div class="mobile">Desktop Experience</div>
 		<script src="script/canvas.polyfill.js" type="text/javascript"></script>	
 		<script src="script/main.js" type="text/javascript"></script>
